Up to section 3

--- a/notes/notes_topics/notes_pages/joining_techniques_notes.html
+++ b/notes/notes_topics/notes_pages/joining_techniques_notes.html
@@ -95,10 +95,10 @@
                     </ul>
                 </div>
                 <div class="notes-content-subheader">
-                    <h2><hr>Adhesives<hr></h2>
+                    <h2 id="Adhesives"><hr>Adhesives<hr></h2>
                 </div>
 
-                <h3><b><u>Contact adhesive:</b></u></h3>
+                <h3 id="Contactadhesive"><b><u>Contact adhesive:</b></u></h3>
                 <table>
                     <tr class="notes-table-header">
                         <th>Advantages</th>
@@ -123,7 +123,7 @@
                 </table>
                 <h3><b>Uses: </b>Applying formica and veneers<br><br></h3>
 
-                <h3><b><u>Tensol cement:</b></u></h3>
+                <h3 id="Tensolcement"><b><u>Tensol cement:</b></u></h3>
                 <table>
                     <tr class="notes-table-header">
                         <th>Advantages</th>
@@ -149,7 +149,7 @@
                 </table>
                 <h3><b>Uses: </b>Applying formica, veneers<br><br></h3>
 
-                <h3><b><u>Epoxy resin:</b></u></h3>
+                <h3 id="Expoxyresinadhesive"><b><u>Epoxy resin:</b></u></h3>
                 <table>
                     <tr class="notes-table-header">
                         <th>Advantages</th>
@@ -173,7 +173,7 @@
                 </table>
                 <h3><b>Uses: </b>Aircraft, boats, golf clubs, skis<br><br></h3>
 
-                <h3><b><u>Polyvinyl acetate</b> (PVA)<b>:</b></u></h3>
+                <h3 id="Polyvinylacetata(PVA)"><b><u>Polyvinyl acetate</b> (PVA)<b>:</b></u></h3>
                 <table>
                     <tr class="notes-table-header">
                         <th>Advantages</th>
@@ -196,7 +196,7 @@
                 </table>
                 <h3><b>Uses: </b>Wood joints, card making, fabrics joining<br><br></h3>
 
-                <h3><b><u>Hot melt glue</b> (glue gun)<b>:</b></u></h3>
+                <h3 id="Hotmeltglue(gluegun)"><b><u>Hot melt glue</b> (glue gun)<b>:</b></u></h3>
                 <table>
                     <tr class="notes-table-header">
                         <th>Advantages</th>
@@ -219,7 +219,7 @@
                 </table>
                 <h3><b>Uses: </b>Model making, model designs<br><br></h3>
 
-                <h3><b><u>Cyanoacrylate</b> (superglue)<b>:</b></u></h3>
+                <h3 id="Cyanoacrylate(superglue)"><b><u>Cyanoacrylate</b> (superglue)<b>:</b></u></h3>
                 <table>
                     <tr class="notes-table-header">
                         <th>Advantages</th>
@@ -244,7 +244,7 @@
                 </table>
                 <h3><b>Uses: </b>Seal cuts, temporary fixes to damages, stopping runs in nylon<br><br></h3>
 
-                <h3><b><u></u>Polystyrene cement:</b></h3>
+                <h3 id="Polystyrenecement"><b><u></u>Polystyrene cement:</b></h3>
                 <table>
                     <tr class="notes-table-header">
                         <th>Advantages</th>
@@ -268,7 +268,7 @@
                 </table>
                 <h3><b>Uses: </b>Airfix models, joining polystyrene<br><br></h3>
                 <div class="notes-content-subheader">
-                    <h2><hr>Mechanical<hr></h2>
+                    <h2 id="Mechanicaljoining"><hr>Mechanical<hr></h2>
                 </div>
                 <h3><b><u></u>Screws:</b></h3>
                 <h3><li>Used to join materials together</li></h3>
@@ -411,9 +411,9 @@
                 </table>
                 <h3><b>Uses: </b>Pattern making on metals<br><br></h3>
                 <div class="notes-content-subheader">
-                    <h2><hr>Heat<hr></h2>
+                    <h2 id="Heat"><hr>Heat<hr></h2>
                 </div>
-                <h3><b><u></u>Oxy acetylene welding:</b></h3>
+                <h3 id="OxyAcetyleneWelding"><b><u></u>Oxy acetylene welding:</b></h3>
                 <p><b>How it works:</b></p>
                     <ul>
                         <ol><li>Used to weld low carbon steel</li>
@@ -446,7 +446,7 @@
                 </table>
                 <h3><b>Uses: </b>General engineering<br><br></h3>
 
-                <h3><b><u></u>MIG welding:</b></h3>
+                <h3 id="MIGWelding"><b><u></u>MIG welding:</b></h3>
                 <p><b>How it works:</b></p>
                     <ul>
                         <ol><li>Used to weld thin metals</li>
@@ -477,7 +477,7 @@
                 </table>
                 <h3><b>Uses: </b>Cars, bike frames, metal barriers<br><br></h3>
 
-                <h3><b><u></u>Brazing:</b></h3>
+                <h3 id="Brazing"><b><u></u>Brazing:</b></h3>
                 <p><b>How it works:</b></p>
                     <ul>
                         <ol><li>The two materials being joined are cleaned before welding</li>
@@ -510,7 +510,7 @@
                 </table>
                 <h3><b>Uses: </b>General engineering, bicycle frame<br><br></h3>
 
-                <h3><b><u></u>Hard soldering:</b></h3>
+                <h3 id="HardSoldering"><b><u></u>Hard soldering:</b></h3>
                 <p><b>How it works:</b></p>
                     <ul>
                         <ol><li>The two metals being joined is cleaned</li>
@@ -541,7 +541,7 @@
                 </table>
                 <h3><b>Uses: </b>Jewellery, ornaments, silverware, model engines<br><br></h3>
 
-                <h3><b><u></u>Soft soldering:</b></h3>
+                <h3 id="SoftSoldering"><b><u></u>Soft soldering:</b></h3>
                 <p><b>How it works:</b></p>
                     <ul>
                         <ol><li>The two metals being joined is cleaned</li>
@@ -572,9 +572,9 @@
                 </table>
                 <h3><b>Uses: </b>Electronics<br><br></h3>
                 <div class="notes-content-subheader">
-                    <h2><hr>Jointing<hr></h2>
+                    <h2 id="Jointing"><hr>Jointing<hr></h2>
                 </div>
-                <h3><b><u></u>Traditional wood joints:</b></h3>
+                <h3 id="TraditionalWoodJoints"><b><u></u>Traditional wood joints:</b></h3>
                 <p><li>Large contact area required for all wood joints (dovetail, comb, housing, half lap, dowel, mortise and tenon)</p></li>
 
                 <div class="notes-content-subheader">
@@ -728,7 +728,7 @@
                     <h2><hr><hr></h2>
                 </div>
 
-                <h3><b><u></u>Knock-down fittings:</b></h3>
+                <h3 id="Knock-downFittings"><b><u></u>Knock-down fittings:</b></h3>
                 <h3><li>Knock-down (KD) fittings are used to manufacture flat-pack furniture</li></h3>
                 <h3><li>They are easy to use and are built by the user with simple tools that are supplied with the product</li></h3>
 
@@ -760,7 +760,7 @@
                     <h2><hr><hr></h2>
                 </div>
 
-                <h3><b><u></u>Wood screws:</b></h3>
+                <h3 id="WoodScrews"><b><u></u>Wood screws:</b></h3>
                 <h3><li>Used to join two pieces of wood together</li></h3>
                 <h3><li>A pilot hole is drilled before and then the screw is screwed in using a screwdriver</li></h3>
 
@@ -768,7 +768,7 @@
                     <h2><hr><hr></h2>
                 </div>
 
-                <h3><b><u></u>Coach bolt:</b></h3>
+                <h3 id="CoachBolt"><b><u></u>Coach bolt:</b></h3>
                 <h3><li>Used to temporarily join wood pieced togther</li></h3>
                 <h3><li>Cannot rotate once it has been bolted in</li></h3>
 
