--- a/notes/notes_topics/notes_pages/lamination_notes.html
+++ b/notes/notes_topics/notes_pages/lamination_notes.html
@@ -87,7 +87,7 @@
                 <div class="notes-content-intro">
                 </div>
 
-                <h3><b><u>Lamination:</b></u></h3>
+                <h3 id="WoodLamination"><b><u>Lamination:</b></u></h3>
                 <div class="notes-content-picture" >
                     <img src="../../../images/notes_pages_images/Lamination_note_photo.jpg" alt="Diagram of shape dimensions">
                 </div>
