--- a/notes/notes_topics/notes_pages/machining_notes.html
+++ b/notes/notes_topics/notes_pages/machining_notes.html
@@ -97,7 +97,7 @@
                     </ul>
                 </div>
 
-                <h3><b><u>Vertical milling:</b></u></h3>
+                <h3 id="VerticalMilling"><b><u>Vertical milling:</b></u></h3>
                 <h3>
                     <p><b>How it works:</b></p>
                     <ul>
@@ -130,7 +130,7 @@
                 </table>
                 <h3><b>Uses: </b>Cutting gears, produce slots, drilling<br><br></h3>
 
-                <h3><b><u>Horizontal milling:</b></u></h3>
+                <h3 id="HorizontalMilling"><b><u>Horizontal milling:</b></u></h3>
                 <h3>
                     <p><b>How it works:</b></p>
                     <ul>
@@ -166,7 +166,7 @@
                 </table>
                 <h3><b>Uses: </b>Cuttings gears, produce slots, drilling<br><br></h3>
 
-                <h3><b><u>Routing:</b></u></h3>
+                <h3 id="Routing"><b><u>Routing:</b></u></h3>
                 <h3>
                     <p><b>How it works:</b></p>
                     <ul>
@@ -198,7 +198,7 @@
                 </table>
                 <h3><b>Uses: </b>Cabinets, doors<br><br></h3>
 
-                <h3><b><u>Drilling:</b></u></h3>
+                <h3 id="Drilling"><b><u>Drilling:</b></u></h3>
                 <h3>
                     <p><b>How it works:</b></p>
                     <ul>
@@ -232,7 +232,7 @@
                 </table>
                 <h3><b>Uses: </b>Drilling holes for products, seperating pop rivets<br><br></h3>
 
-                <h3><b><u>Turning:</b></u></h3>
+                <h3 id="Turning"><b><u>Turning:</b></u></h3>
                 <h3>
 
                     <div class="notes-content-picture" >
@@ -271,7 +271,7 @@
                 <h3><b>Uses: </b>Table legs, table lamp, engine parts, handles</h3>
                 <h3><b>Note: </b>Turning machines are different depending on the material being used.<br><br></h3>
 
-                <h3><b><u>Stamping:</b></u></h3>
+                <h3 id="Stamping"><b><u>Stamping:</b></u></h3>
                 <h3>
 
                     <div class="notes-content-picture" >
