--- a/notes/notes_topics/notes_pages/moulding_notes.html
+++ b/notes/notes_topics/notes_pages/moulding_notes.html
@@ -95,7 +95,7 @@
                     </ul>
                 </div>
 
-                <h3><b><u>Blow moulding:</b></u></h3>
+                <h3 id="BlowMoulding"><b><u>Blow moulding:</b></u></h3>
                 <h3>
 
                     <div class="notes-content-picture" >
@@ -133,7 +133,7 @@
                 </table>
                 <h3><b>Uses: </b>Plastic bottles, containers<br><br></h3>
 
-                <h3><b><u>Injection moulding:</b></u></h3>
+                <h3 id="InjectionMoulding"><b><u>Injection moulding:</b></u></h3>
                 <h3>
 
                     <div class="notes-content-picture" >
@@ -172,7 +172,7 @@
                 </table>
                 <h3><b>Uses: </b>Casings for electric products, containers for storage/packaging<br><br></h3>
 
-                <h3><b><u>Vacuum forming:</b></u></h3>
+                <h3 id="VacuumForming"><b><u>Vacuum forming:</b></u></h3>
                 <h3>
 
                     <div class="notes-content-picture" >
@@ -213,7 +213,7 @@
                 </table>
                 <h3><b>Uses: </b>Yoghurt pots, blister packaging, inside of fridges<br><br></h3>
 
-                <h3><b><u>Extrusion:</b></u></h3>
+                <h3 id="Extrusion"><b><u>Extrusion:</b></u></h3>
                 <h3>
 
                     <div class="notes-content-picture" >
@@ -251,7 +251,7 @@
                 </table>
                 <h3><b>Uses: </b>Collapsible tubes, guttering, straws, gear blanks<br><br></h3>
 
-                <h3><b><u>Rotational moulding:</b></u></h3>
+                <h3 id="RotationalMoulding"><b><u>Rotational moulding:</b></u></h3>
                 <h3>
 
                     <div class="notes-content-picture" >
