--- a/notes/notes_topics/notes_pages/printing_notes.html
+++ b/notes/notes_topics/notes_pages/printing_notes.html
@@ -94,7 +94,7 @@
                     </ul>
                 </div>
 
-                <h3><b><u>Offset lithography:</b></u></h3>
+                <h3 id="OffsetLithography"><b><u>Offset lithography:</b></u></h3>
                 <h3>
                     <div class="notes-content-picture" >
                         <img src="../../../images/notes_pages_images/offsetlithography.png" alt="Diagram of shape dimensions">
@@ -132,7 +132,7 @@
                 </table>
                 <h3><b>Uses: </b>Books, business forms, magazines, posters<br><br></h3>
 
-                <h3><b><u>Flexography:</b></u></h3>
+                <h3 id="Flexography"><b><u>Flexography:</b></u></h3>
                 <h3>
                     <div class="notes-content-picture" >
                         <img src="../../../images/notes_pages_images/flexography.png" alt="Diagram of shape dimensions">
@@ -171,7 +171,7 @@
                 </table>
                 <h3><b>Uses: </b>Newspapers, comics, cartons, carrier bags<br><br></h3>
 
-                <h3><b><u>Screen printing:</b></u></h3>
+                <h3 id="ScreenPrinting"><b><u>Screen printing:</b></u></h3>
                 <h3>
                     <div class="notes-content-picture" >
                         <img src="../../../images/notes_pages_images/screenprinting.png" alt="Diagram of shape dimensions">
@@ -211,7 +211,7 @@
                 </table>
                 <h3><b>Uses: </b>Posters, display boards, textile T-shirts<br><br></h3>
 
-                <h3><b><u>Gravure printing:</b></u></h3>
+                <h3 id="GravurePrinting"><b><u>Gravure printing:</b></u></h3>
                 <h3>
                     <div class="notes-content-picture" >
                         <img src="../../../images/notes_pages_images/gravure.png" alt="Diagram of shape dimensions">
