--- a/notes/notes_topics/notes_pages/specialist_marking_tools_notes.html
+++ b/notes/notes_topics/notes_pages/specialist_marking_tools_notes.html
@@ -87,7 +87,7 @@
                 <div class="notes-content-intro">
                 </div>
 
-                <h3><b><u>Marking/Cutting/Mortise gauage:</b></u></h3>
+                <h3 id="MortiseGauge"><b><u>Marking/Cutting/Mortise gauage:</b></u></h3>
                 <h3><ul>
                         <li>Used to mark/dent a piece of timber parallel to the edge</li>
                     </ul></h3>
@@ -95,7 +95,7 @@
                         <img src="../../../images/notes_pages_images/mortisegauge.png" alt="Diagram of shape dimensions">
                     </div>
 
-                    <h3><b><u>Odd leg calipers:</b></u></h3>
+                    <h3 id="OddLegCalipers"><b><u>Odd leg calipers:</b></u></h3>
                 <h3><ul>
                         <li>Used to mark a line on an edge/step on a peice of metal</li>
                     </ul></h3>
@@ -103,12 +103,12 @@
                         <img src="../../../images/notes_pages_images/oddlegcaliper.png" alt="Diagram of shape dimensions">
                     </div>
 
-                    <h3><b><u>Internal calipers:</b></u></h3>
+                    <h3 id="InternalCalipers"><b><u>Internal calipers:</b></u></h3>
                 <h3><ul>
                         <li>Used to measure the internal diameter of a tube/pole</li>
                     </ul></h3>
 
-                    <h3><b><u>External calipers:</b></u></h3>
+                    <h3 id="ExternalCalipers"><b><u>External calipers:</b></u></h3>
                 <h3><ul>
                         <li>Used to measure the outsude diameter of a tube/pole</li>
                     </ul></h3>
@@ -116,12 +116,12 @@
                         <img src="../../../images/notes_pages_images/calipers.png" alt="Diagram of shape dimensions">
                     </div>
 
-                    <h3><b><u>Try-square:</b></u></h3>
+                    <h3 id="TrySquare"><b><u>Try-square:</b></u></h3>
                 <h3><ul>
                         <li>Used to mark a line 90<sup>o</sup> to a piece of timber</li>
                     </ul></h3>
 
-                    <h3><b><u>Engineering square:</b></u></h3>
+                    <h3 id="EngineeringSquare"><b><u>Engineering square:</b></u></h3>
                 <h3><ul>
                         <li>Used to mark a line 90<sup>o</sup> to a piece of metal</li>
                     </ul></h3>
@@ -129,7 +129,7 @@
                         <img src="../../../images/notes_pages_images/squares.png" alt="Diagram of shape dimensions">
                     </div>
 
-                    <h3><b><u>Micrometre:</b></u></h3>
+                    <h3 id="Micrometer"><b><u>Micrometre:</b></u></h3>
                 <h3><ul>
                         <li>Used to measure a small distance/thickness between its tqo faces, one face can be moved to measure different distances</li>
                     </ul></h3>
@@ -137,7 +137,7 @@
                         <img src="../../../images/notes_pages_images/micrometre.png" alt="Diagram of shape dimensions">
                     </div>
 
-                    <h3><b><u>Vernier calipers:</b></u></h3>
+                    <h3 id="VernierCalipers"><b><u>Vernier calipers:</b></u></h3>
                 <h3><ul>
                         <li>Used to measure internal/external measurements very orecisely</li>
                     </ul></h3>
@@ -146,12 +146,12 @@
                     </div>
 
 
-                    <h3><b><u>Densitometer:</b></u></h3>
+                    <h3 id="Densitometer"><b><u>Densitometer:</b></u></h3>
                 <h3><ul>
                         <li>A machine which can be used to measure the optical density of a photographic/semi-transparent material</li>
                     </ul></h3>
 
-                    <h3><b><u>Dividers:</b></u></h3>
+                    <h3 id="Dividers"><b><u>Dividers:</b></u></h3>
                 <h3><ul>
                         <li>Used to mark circles/curves on a piece of metal</li>
                     </ul></h3>
@@ -159,7 +159,7 @@
                         <img src="../../../images/notes_pages_images/dividers.png" alt="Diagram of shape dimensions">
                     </div>
 
-                    <h3><b><u>Jigs:</b></u></h3>
+                    <h3 id="Jigs"><b><u>Jigs:</b></u></h3>
                 <h3><ul>
                         <li>A jig is used to control the motion of a tool</li>
                     </ul></h3>
@@ -185,7 +185,7 @@
                         </tr>
                     </table>
 
-                    <h3><b><u>Fixtures:</b></u></h3>
+                    <h3 id="Fixtures"><b><u>Fixtures:</b></u></h3>
                 <h3><ul>
                         <li>Used to support/hold the workpiece in place</li>
                     </ul></h3>
@@ -210,7 +210,7 @@
                         </tr>
                     </table>
 
-                    <h3><b><u>Go-no-go gauage:</b></u></h3>
+                    <h3 id="GoNoGoGauge"><b><u>Go-no-go gauage:</b></u></h3>
                 <h3><ul>
                         <li>A go-no-go gauge is a tool used to check a piece of work is the correct size against its allowable tolerance</li>
                     </ul></h3>
